--- a/index.html
+++ b/index.html
@@ -3,41 +3,84 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Nikki's Projects</title>
+  <title>About Nikki</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=VT323&display=swap">
   <style>
     body {
-      font-family: sans-serif;
-      max-width: 700px;
-      margin: 2rem auto;
-      padding: 0 1rem;
+      margin: 0;
+      font-family: 'VT323', monospace;
+      background-color: #0e0e0e;
+      color: #d1d1d1;
+      line-height: 1.6;
+      padding: 2rem;
     }
-    h1 {
-      text-align: center;
+
+    .container {
+      max-width: 800px;
+      margin: auto;
+      padding: 1rem;
+      background-color: #1e1e1e;
+      border: 2px solid #444;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #000;
     }
-    ul {
-      list-style: none;
-      padding: 0;
+
+    h1, h2 {
+      color: #ff79c6;
     }
-    li {
-      margin: 1rem 0;
-    }
+
     a {
+      color: #8be9fd;
       text-decoration: none;
-      color: #3366cc;
-      font-size: 1.2rem;
     }
+
     a:hover {
       text-decoration: underline;
+    }
+
+    ul {
+      list-style-type: square;
+      margin-left: 1.5rem;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 2rem;
+      font-size: 0.9rem;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <h1>Nikki's Projects</h1>
-  <p>Click a project to visit its GitHub Pages site:</p>
-  <ul>
-    <li><a href="https://n1kkithegamer.github.io/cool-mod/">Cool Mod</a></li>
-    <li><a href="https://n1kkithegamer.github.io/blender-tools/">Blender Tools</a></li>
-    <li><a href="https://n1kkithegamer.github.io/minecraft-pack/">Minecraft Pack</a></li>
-  </ul>
+  <div class="container">
+    <h1>🎮 Hi, I'm Nikki!</h1>
+    <p>I’m a (not that experienced) game dev who shoots too high sometimes</p>
+
+    <h2>🛠️ What I Use</h2>
+    <ul>
+      <li><strong>Game Engines:</strong> Unity, Godot, Minecraft</li>
+      <li><strong>3D & Art Tools:</strong> Blender Paint3D (best paint program imo)</li>
+      <li><strong>Web Dev:</strong> HTML, CSS, GitHub Pages</li>
+    </ul>
+
+    <h2>🧪 Projects</h2>
+    <ul>
+      <li>Custom Minecraft data packs and texture packs</li>
+      <li>a webfishing mod/li>
+      <li>small cool websites</li>
+    </ul>
+
+    <h2>🌐 Links</h2>
+    <ul>
+      <li>YouTube: <a href="https://youtube.com/@n1kkithegamer" target="_blank">@n1kkithegamer</a></li>
+      <li>GitHub: <a href="https://github.com/gamernikki" target="_blank">@YOUR_USERNAME</a></li>
+    </ul>
+
+    <p><em>“Stay curious, stay creative.”</em></p>
+  </div>
+
+  <footer>
+    &copy; 2025 Nikki | Built with ❤️ on GitHub Pages
+  </footer>
 </body>
 </html>
