--- a/index.html
+++ b/index.html
@@ -54,29 +54,29 @@
 <body>
   <div class="container">
     <h1>🎮 Hi, I'm Nikki!</h1>
-    <p>I’m a (not that experienced) game dev who shoots too high sometimes</p>
+    <p>I’m a (not that experienced) game dev who shoots too high sometimes, but that’s part of the fun.</p>
 
     <h2>🛠️ What I Use</h2>
     <ul>
       <li><strong>Game Engines:</strong> Unity, Godot, Minecraft</li>
-      <li><strong>3D & Art Tools:</strong> Blender Paint3D (best paint program imo)</li>
+      <li><strong>3D & Art Tools:</strong> Blender, Paint3D (best paint program imo)</li>
       <li><strong>Web Dev:</strong> HTML, CSS, GitHub Pages</li>
     </ul>
 
     <h2>🧪 Projects</h2>
     <ul>
       <li>Custom Minecraft data packs and texture packs</li>
-      <li>a webfishing mod/li>
-      <li>small cool websites</li>
+      <li>A webfishing mod</li>
+      <li>Small cool websites</li>
     </ul>
 
     <h2>🌐 Links</h2>
     <ul>
       <li>YouTube: <a href="https://youtube.com/@n1kkithegamer" target="_blank">@n1kkithegamer</a></li>
-      <li>GitHub: <a href="https://github.com/gamernikki" target="_blank">@YOUR_USERNAME</a></li>
+      <li>GitHub: <a href="https://github.com/gamernikki" target="_blank">@gamernikki</a></li>
     </ul>
 
-    <p><em>“Stay curious, stay creative.”</em></p>
+    <p><em>“keep your mental health in check and take breaks.”</em></p>
   </div>
 
   <footer>
