--- a/index.html
+++ b/index.html
@@ -70,6 +70,14 @@
       <li>Small cool websites</li>
     </ul>
 
+    <h2>📚 Character Wiki and other projects</h2>
+    <p>
+      I write about my characters here:<br />
+      <a href="https://gamernikki.github.io/NikkisCharacterWiki/" target="_blank">
+        NikkisCharacterWiki
+      </a>
+    </p>
+
     <h2>🌐 Links</h2>
     <ul>
       <li>YouTube: <a href="https://youtube.com/@n1kkithegamer" target="_blank">@n1kkithegamer</a></li>
